<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccount.StudentProfileInterface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:text="@string/profile"
                    android:textColor="#000000"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/stdName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text"
                    android:hint="Your Name"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/matric"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/stdID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text"
                    android:hint="Your Matric ID"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ic"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/stdIC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text"
                    android:hint="Your IC No."
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/stdPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text"
                    android:hint="Your Phone No."
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/emailStd"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/stdEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text"
                    android:hint="Your Email"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/campusStd"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/stdCampus"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp">

                    <RadioButton
                        android:id="@+id/rbGambang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Gambang"
                        android:textColor="#000000"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/rbPekan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pekan"
                        android:textColor="#000000"
                        android:textSize="18dp"/>

                </RadioGroup>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/icPhoto"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/stdICPhoto"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:src="@drawable/add_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/idPhoto"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/stdIDPhoto"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:src="@drawable/add_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/licence"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/stdLicencePhoto"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:src="@drawable/add_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/stdUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/editP" />

                    <Button
                        android:id="@+id/stdDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="70dp"
                        android:backgroundTint="#FF0000"
                        android:text="@string/deleteP" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:menu="@menu/student_nav">
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>



</RelativeLayout>