<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageCar.AddCarInterface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/addCar"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/model"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/cModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_text"
                android:hint="Car Model"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/plate"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/cPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_text"
                android:hint="Plate number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/number"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/cPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_text"
                android:hint="Person in Car"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/fee"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/cFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_text"
                android:hint="Rent Fee (RM)"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/des"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_text"
                android:hint="Description"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/type"
                android:textColor="#000000"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp">

                <RadioButton
                    android:id="@+id/autoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Automatic"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/manualC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Manual"
                    android:textColor="#000000"
                    android:textSize="18dp" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/sticker"
                android:textColor="#000000"
                android:textSize="20dp" />


            <ImageView
                android:id="@+id/cSticker"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:clickable="true"
                android:src="@drawable/add_image" />

            <Button
                android:id="@+id/nextC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/next"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:menu="@menu/carowner_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </LinearLayout>

</RelativeLayout>